--- a/Paper/background.tex
+++ b/Paper/background.tex
@@ -50,6 +50,7 @@ The metrics often selected in practice are variants of the energy-delay product 
 EDP = Energy \times Runtime
 \end{equation}
 \begin{equation}
+\label{eq:edp}
 EDP = Power \times Runtime^{2}
 \end{equation}
 \begin{equation}
