--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -7,7 +7,7 @@
 \setlength{\parindent}{15pt} 
 \usepackage{multirow}
 \usepackage{amsfonts}
-\usepackage{mathtools}
+\usepackage{amssymb}
 \usepackage{booktabs}
 \usepackage{listings}
 \usepackage[justification=centering]{caption}
